--- a/FrontProactIF/src/main/webapp/inscription.css
+++ b/FrontProactIF/src/main/webapp/inscription.css
@@ -29,11 +29,10 @@ h1 {
     margin: 0 auto;
     width: 700px;
     vertical-align: middle;
-    background-color: lemonchiffon;
+    background: rgba(255, 250, 205, 0.7);
     border-radius: 30px;
     border: 15px solid grey;
     padding: 40px;
-    opacity : 0.8;
 }
 
 #fill
@@ -45,6 +44,13 @@ h1 {
 #bouton-inscription{
     display: inline-block;
     float: right;
+    height:30px;
+    width:180px;
+}
+
+#bouton-accueil {
+    display: inline-block;
+    float: left;
     height:30px;
     width:180px;
 }
