Most of CSS is done, back is done. Waiting for external advices.

--- a/FrontProactIF/src/main/webapp/navbar.css
+++ b/FrontProactIF/src/main/webapp/navbar.css
@@ -3,7 +3,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: grey;
 }
 
 li {
@@ -28,5 +28,5 @@ li a:hover:not(.active) {
 }
 
 .active {
-  background-color: #4CAF50;
+  background-color: aqua;
 }
