--- a/FrontProactIF/src/main/webapp/creerIntervention.css
+++ b/FrontProactIF/src/main/webapp/creerIntervention.css
@@ -26,7 +26,7 @@ h1 {
 .shape
 {
     margin: 0 auto;
-    width: 800px;
+    width: 90%;
     vertical-align: middle;
     background: rgba(0, 255, 255, 0.8);
     border-radius: 30px;
