--- a/FrontProactIF/src/main/webapp/index.css
+++ b/FrontProactIF/src/main/webapp/index.css
@@ -55,7 +55,10 @@ i {
 }
 
 .shape {
-    width:700px;height:500px;background-color:aqua;border-radius: 30px;
+    width:700px;
+    height:500px;
+    background-color:aqua;
+    border-radius: 30px;
 }
 
 .button {
